y.output
Terminals unused in grammar

   p0
   p1
   p2
   p4
   p5
   p6
   p7
   p8
   p9
   p11
   p12
   p13
   p14
   p15
   p17
   p18
   p19
   p20
   p21
   p22
   p23
   p24
   p25
   p27
   p29
   p30
   p31
   p32
   p33
   p34
   p36
   p37
   p38
   p39
   p40
   p41
   p42
   p43
   p45
   p46
   p47
   p48
   p49
   p50
   p51
   p52
   p53
   p54
   p55
   p56
   p57
   p58
   p59
   p61
   p62
   p130
   p63
   p64
   p65
   p66
   p67
   p68
   p69
   p70
   p71
   p72
   p73
   p75
   p76
   p78
   p79
   p80
   p81
   p82
   p83
   p84
   p85
   p86
   p99
   p100
   p105
   p106
   p107
   p110
   p120
   p127
   p128
   p129
   p95
   p96
   p97
   p111
   p112
   p113
   p114
   p115
   p122
   p123
   p124
   p125
   p126


State 22 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce


Grammar

    0 $accept: Pro $end

    1 Pro: %empty
    2    | Pro Func

    3 Func: p26 FuncName p91 Args p92 p93 VarDecls Stmts p94

    4 FuncName: p200

    5 Args: %empty
    6     | _Args

    7 _Args: p35 p200
    8      | _Args p104 p35 p200

    9 VarDecls: %empty
   10         | VarDecls VarDecl p101

   11 VarDecl: p35 p200
   12        | VarDecl p104 p200
   13        | p35 Equation

   14 $@1: %empty

   15 Equation: p200 p121 $@1 Expr
   16         | Equation p104 Equation

   17 Stmts: %empty
   18      | Stmts Stmt

   19 Stmt: AssignStmt
   20     | PrintStmt
   21     | CallStmt
   22     | ReturnStmt
   23     | IfStmt
   24     | WhileStmt
   25     | BreakStmt
   26     | ContinueStmt

   27 AssignStmt: p200 p121 Expr p101

   28 PrintStmt: p131 p91 p77 PActuals p92 p101

   29 PActuals: %empty
   30         | PActuals p104 Expr

   31 CallStmt: CallExpr p101

   32 CallExpr: p200 p91 Actuals p92

   33 Actuals: %empty
   34        | Expr PActuals

   35 ReturnStmt: p44 Expr p101
   36           | p44 p101

   37 IfStmt: If TestExpr Then StmtsBlock EndThen EndIf
   38       | If TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf

   39 TestExpr: p91 Expr p92

   40 StmtsBlock: p93 Stmts p94

   41 If: p28

   42 Then: %empty

   43 EndThen: %empty

   44 Else: p16

   45 EndIf: %empty

   46 WhileStmt: While TestExpr Do StmtsBlock EndWhile

   47 While: p60

   48 Do: %empty

   49 EndWhile: %empty

   50 BreakStmt: p3 p101

   51 ContinueStmt: p10 p101

   52 Expr: Expr p87 Expr
   53     | Expr p88 Expr
   54     | Expr p89 Expr
   55     | Expr p90 Expr
   56     | Expr p133 Expr
   57     | Expr p103 Expr
   58     | Expr p102 Expr
   59     | Expr p117 Expr
   60     | Expr p116 Expr
   61     | Expr p118 Expr
   62     | Expr p119 Expr
   63     | Expr p109 Expr
   64     | Expr p108 Expr
   65     | p98 Expr
   66     | p74
   67     | p200
   68     | ReadInt
   69     | CallExpr
   70     | p91 Expr p92

   71 ReadInt: p132 p91 p77 p92


Terminals, with rules where they appear

$end (0) 0
error (256)
p0 (258)
p1 (259)
p2 (260)
p3 (261) 50
p4 (262)
p5 (263)
p6 (264)
p7 (265)
p8 (266)
p9 (267)
p10 (268) 51
p11 (269)
p12 (270)
p13 (271)
p14 (272)
p15 (273)
p16 (274) 44
p17 (275)
p18 (276)
p19 (277)
p20 (278)
p21 (279)
p22 (280)
p23 (281)
p24 (282)
p25 (283)
p26 (284) 3
p27 (285)
p28 (286) 41
p29 (287)
p30 (288)
p31 (289)
p32 (290)
p33 (291)
p34 (292)
p35 (293) 7 8 11 13
p36 (294)
p37 (295)
p38 (296)
p39 (297)
p40 (298)
p41 (299)
p42 (300)
p43 (301)
p44 (302) 35 36
p45 (303)
p46 (304)
p47 (305)
p48 (306)
p49 (307)
p50 (308)
p51 (309)
p52 (310)
p53 (311)
p54 (312)
p55 (313)
p56 (314)
p57 (315)
p58 (316)
p59 (317)
p60 (318) 47
p61 (319)
p62 (320)
p130 (321)
p63 (322)
p64 (323)
p65 (324)
p66 (325)
p67 (326)
p68 (327)
p69 (328)
p70 (329)
p71 (330)
p72 (331)
p73 (332)
p74 (333) 66
p75 (334)
p76 (335)
p77 (336) 28 71
p78 (337)
p79 (338)
p80 (339)
p81 (340)
p82 (341)
p83 (342)
p84 (343)
p85 (344)
p86 (345)
p98 (346) 65
p99 (347)
p100 (348)
p101 (349) 10 27 28 31 35 36 50 51
p102 (350) 58
p103 (351) 57
p104 (352) 8 12 16 30
p105 (353)
p106 (354)
p107 (355)
p110 (356)
p120 (357)
p121 (358) 15 27
p127 (359)
p128 (360)
p129 (361)
p87 (362) 52
p88 (363) 53
p89 (364) 54
p90 (365) 55
p91 (366) 3 28 32 39 70 71
p92 (367) 3 28 32 39 70 71
p93 (368) 3 40
p94 (369) 3 40
p95 (370)
p96 (371)
p97 (372)
p108 (373) 64
p109 (374) 63
p111 (375)
p112 (376)
p113 (377)
p114 (378)
p115 (379)
p116 (380) 60
p117 (381) 59
p118 (382) 61
p119 (383) 62
p122 (384)
p123 (385)
p124 (386)
p125 (387)
p126 (388)
p200 (389) 4 7 8 11 12 15 27 32 67
p131 (390) 28
p132 (391) 71
p133 (392) 56


Nonterminals, with rules where they appear

$accept (138)
    on left: 0
Pro (139)
    on left: 1 2, on right: 0 2
Func (140)
    on left: 3, on right: 2
FuncName (141)
    on left: 4, on right: 3
Args (142)
    on left: 5 6, on right: 3
_Args (143)
    on left: 7 8, on right: 6 8
VarDecls (144)
    on left: 9 10, on right: 3 10
VarDecl (145)
    on left: 11 12 13, on right: 10 12
Equation (146)
    on left: 15 16, on right: 13 16
$@1 (147)
    on left: 14, on right: 15
Stmts (148)
    on left: 17 18, on right: 3 18 40
Stmt (149)
    on left: 19 20 21 22 23 24 25 26, on right: 18
AssignStmt (150)
    on left: 27, on right: 19
PrintStmt (151)
    on left: 28, on right: 20
PActuals (152)
    on left: 29 30, on right: 28 30 34
CallStmt (153)
    on left: 31, on right: 21
CallExpr (154)
    on left: 32, on right: 31 69
Actuals (155)
    on left: 33 34, on right: 32
ReturnStmt (156)
    on left: 35 36, on right: 22
IfStmt (157)
    on left: 37 38, on right: 23
TestExpr (158)
    on left: 39, on right: 37 38 46
StmtsBlock (159)
    on left: 40, on right: 37 38 46
If (160)
    on left: 41, on right: 37 38
Then (161)
    on left: 42, on right: 37 38
EndThen (162)
    on left: 43, on right: 37 38
Else (163)
    on left: 44, on right: 38
EndIf (164)
    on left: 45, on right: 37 38
WhileStmt (165)
    on left: 46, on right: 24
While (166)
    on left: 47, on right: 46
Do (167)
    on left: 48, on right: 46
EndWhile (168)
    on left: 49, on right: 46
BreakStmt (169)
    on left: 50, on right: 25
ContinueStmt (170)
    on left: 51, on right: 26
Expr (171)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70, on right: 15 27 30 34 35 39 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 70
ReadInt (172)
    on left: 71, on right: 68


State 0

    0 $accept: . Pro $end

    $default  reduce using rule 1 (Pro)

    Pro  go to state 1


State 1

    0 $accept: Pro . $end
    2 Pro: Pro . Func

    $end  shift, and go to state 2
    p26   shift, and go to state 3

    Func  go to state 4


State 2

    0 $accept: Pro $end .

    $default  accept


State 3

    3 Func: p26 . FuncName p91 Args p92 p93 VarDecls Stmts p94

    p200  shift, and go to state 5

    FuncName  go to state 6


State 4

    2 Pro: Pro Func .

    $default  reduce using rule 2 (Pro)


State 5

    4 FuncName: p200 .

    $default  reduce using rule 4 (FuncName)


State 6

    3 Func: p26 FuncName . p91 Args p92 p93 VarDecls Stmts p94

    p91  shift, and go to state 7


State 7

    3 Func: p26 FuncName p91 . Args p92 p93 VarDecls Stmts p94

    p35  shift, and go to state 8

    $default  reduce using rule 5 (Args)

    Args   go to state 9
    _Args  go to state 10


State 8

    7 _Args: p35 . p200

    p200  shift, and go to state 11


State 9

    3 Func: p26 FuncName p91 Args . p92 p93 VarDecls Stmts p94

    p92  shift, and go to state 12


State 10

    6 Args: _Args .
    8 _Args: _Args . p104 p35 p200

    p104  shift, and go to state 13

    $default  reduce using rule 6 (Args)


State 11

    7 _Args: p35 p200 .

    $default  reduce using rule 7 (_Args)


State 12

    3 Func: p26 FuncName p91 Args p92 . p93 VarDecls Stmts p94

    p93  shift, and go to state 14


State 13

    8 _Args: _Args p104 . p35 p200

    p35  shift, and go to state 15


State 14

    3 Func: p26 FuncName p91 Args p92 p93 . VarDecls Stmts p94

    $default  reduce using rule 9 (VarDecls)

    VarDecls  go to state 16


State 15

    8 _Args: _Args p104 p35 . p200

    p200  shift, and go to state 17


State 16

    3 Func: p26 FuncName p91 Args p92 p93 VarDecls . Stmts p94
   10 VarDecls: VarDecls . VarDecl p101

    p35  shift, and go to state 18

    $default  reduce using rule 17 (Stmts)

    VarDecl  go to state 19
    Stmts    go to state 20


State 17

    8 _Args: _Args p104 p35 p200 .

    $default  reduce using rule 8 (_Args)


State 18

   11 VarDecl: p35 . p200
   13        | p35 . Equation

    p200  shift, and go to state 21

    Equation  go to state 22


State 19

   10 VarDecls: VarDecls VarDecl . p101
   12 VarDecl: VarDecl . p104 p200

    p101  shift, and go to state 23
    p104  shift, and go to state 24


State 20

    3 Func: p26 FuncName p91 Args p92 p93 VarDecls Stmts . p94
   18 Stmts: Stmts . Stmt

    p3    shift, and go to state 25
    p10   shift, and go to state 26
    p28   shift, and go to state 27
    p44   shift, and go to state 28
    p60   shift, and go to state 29
    p94   shift, and go to state 30
    p200  shift, and go to state 31
    p131  shift, and go to state 32

    Stmt          go to state 33
    AssignStmt    go to state 34
    PrintStmt     go to state 35
    CallStmt      go to state 36
    CallExpr      go to state 37
    ReturnStmt    go to state 38
    IfStmt        go to state 39
    If            go to state 40
    WhileStmt     go to state 41
    While         go to state 42
    BreakStmt     go to state 43
    ContinueStmt  go to state 44


State 21

   11 VarDecl: p35 p200 .
   15 Equation: p200 . p121 $@1 Expr

    p121  shift, and go to state 45

    $default  reduce using rule 11 (VarDecl)


State 22

   13 VarDecl: p35 Equation .
   16 Equation: Equation . p104 Equation

    p104  shift, and go to state 46

    p104      [reduce using rule 13 (VarDecl)]
    $default  reduce using rule 13 (VarDecl)


State 23

   10 VarDecls: VarDecls VarDecl p101 .

    $default  reduce using rule 10 (VarDecls)


State 24

   12 VarDecl: VarDecl p104 . p200

    p200  shift, and go to state 47


State 25

   50 BreakStmt: p3 . p101

    p101  shift, and go to state 48


State 26

   51 ContinueStmt: p10 . p101

    p101  shift, and go to state 49


State 27

   41 If: p28 .

    $default  reduce using rule 41 (If)


State 28

   35 ReturnStmt: p44 . Expr p101
   36           | p44 . p101

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p101  shift, and go to state 52
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 57
    ReadInt   go to state 58


State 29

   47 While: p60 .

    $default  reduce using rule 47 (While)


State 30

    3 Func: p26 FuncName p91 Args p92 p93 VarDecls Stmts p94 .

    $default  reduce using rule 3 (Func)


State 31

   27 AssignStmt: p200 . p121 Expr p101
   32 CallExpr: p200 . p91 Actuals p92

    p121  shift, and go to state 59
    p91   shift, and go to state 60


State 32

   28 PrintStmt: p131 . p91 p77 PActuals p92 p101

    p91  shift, and go to state 61


State 33

   18 Stmts: Stmts Stmt .

    $default  reduce using rule 18 (Stmts)


State 34

   19 Stmt: AssignStmt .

    $default  reduce using rule 19 (Stmt)


State 35

   20 Stmt: PrintStmt .

    $default  reduce using rule 20 (Stmt)


State 36

   21 Stmt: CallStmt .

    $default  reduce using rule 21 (Stmt)


State 37

   31 CallStmt: CallExpr . p101

    p101  shift, and go to state 62


State 38

   22 Stmt: ReturnStmt .

    $default  reduce using rule 22 (Stmt)


State 39

   23 Stmt: IfStmt .

    $default  reduce using rule 23 (Stmt)


State 40

   37 IfStmt: If . TestExpr Then StmtsBlock EndThen EndIf
   38       | If . TestExpr Then StmtsBlock EndThen Else StmtsBlock EndIf

    p91  shift, and go to state 63

    TestExpr  go to state 64


State 41

   24 Stmt: WhileStmt .

    $default  reduce using rule 24 (Stmt)


State 42

   46 WhileStmt: While . TestExpr Do StmtsBlock EndWhile

    p91  shift, and go to state 63

    TestExpr  go to state 65


State 43

   25 Stmt: BreakStmt .

    $default  reduce using rule 25 (Stmt)


State 44

   26 Stmt: ContinueStmt .

    $default  reduce using rule 26 (Stmt)


State 45

   15 Equation: p200 p121 . $@1 Expr

    $default  reduce using rule 14 ($@1)

    $@1  go to state 66


State 46

   16 Equation: Equation p104 . Equation

    p200  shift, and go to state 67

    Equation  go to state 68


State 47

   12 VarDecl: VarDecl p104 p200 .

    $default  reduce using rule 12 (VarDecl)


State 48

   50 BreakStmt: p3 p101 .

    $default  reduce using rule 50 (BreakStmt)


State 49

   51 ContinueStmt: p10 p101 .

    $default  reduce using rule 51 (ContinueStmt)


State 50

   66 Expr: p74 .

    $default  reduce using rule 66 (Expr)


State 51

   65 Expr: p98 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 69
    ReadInt   go to state 58


State 52

   36 ReturnStmt: p44 p101 .

    $default  reduce using rule 36 (ReturnStmt)


State 53

   70 Expr: p91 . Expr p92

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 70
    ReadInt   go to state 58


State 54

   32 CallExpr: p200 . p91 Actuals p92
   67 Expr: p200 .

    p91  shift, and go to state 60

    $default  reduce using rule 67 (Expr)


State 55

   71 ReadInt: p132 . p91 p77 p92

    p91  shift, and go to state 71


State 56

   69 Expr: CallExpr .

    $default  reduce using rule 69 (Expr)


State 57

   35 ReturnStmt: p44 Expr . p101
   52 Expr: Expr . p87 Expr
   53     | Expr . p88 Expr
   54     | Expr . p89 Expr
   55     | Expr . p90 Expr
   56     | Expr . p133 Expr
   57     | Expr . p103 Expr
   58     | Expr . p102 Expr
   59     | Expr . p117 Expr
   60     | Expr . p116 Expr
   61     | Expr . p118 Expr
   62     | Expr . p119 Expr
   63     | Expr . p109 Expr
   64     | Expr . p108 Expr

    p101  shift, and go to state 72
    p102  shift, and go to state 73
    p103  shift, and go to state 74
    p87   shift, and go to state 75
    p88   shift, and go to state 76
    p89   shift, and go to state 77
    p90   shift, and go to state 78
    p108  shift, and go to state 79
    p109  shift, and go to state 80
    p116  shift, and go to state 81
    p117  shift, and go to state 82
    p118  shift, and go to state 83
    p119  shift, and go to state 84
    p133  shift, and go to state 85


State 58

   68 Expr: ReadInt .

    $default  reduce using rule 68 (Expr)


State 59

   27 AssignStmt: p200 p121 . Expr p101

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 86
    ReadInt   go to state 58


State 60

   32 CallExpr: p200 p91 . Actuals p92

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    $default  reduce using rule 33 (Actuals)

    CallExpr  go to state 56
    Actuals   go to state 87
    Expr      go to state 88
    ReadInt   go to state 58


State 61

   28 PrintStmt: p131 p91 . p77 PActuals p92 p101

    p77  shift, and go to state 89


State 62

   31 CallStmt: CallExpr p101 .

    $default  reduce using rule 31 (CallStmt)


State 63

   39 TestExpr: p91 . Expr p92

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 90
    ReadInt   go to state 58


State 64

   37 IfStmt: If TestExpr . Then StmtsBlock EndThen EndIf
   38       | If TestExpr . Then StmtsBlock EndThen Else StmtsBlock EndIf

    $default  reduce using rule 42 (Then)

    Then  go to state 91


State 65

   46 WhileStmt: While TestExpr . Do StmtsBlock EndWhile

    $default  reduce using rule 48 (Do)

    Do  go to state 92


State 66

   15 Equation: p200 p121 $@1 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 93
    ReadInt   go to state 58


State 67

   15 Equation: p200 . p121 $@1 Expr

    p121  shift, and go to state 45


State 68

   16 Equation: Equation . p104 Equation
   16         | Equation p104 Equation .

    p104  shift, and go to state 46

    p104      [reduce using rule 16 (Equation)]
    $default  reduce using rule 16 (Equation)


State 69

   52 Expr: Expr . p87 Expr
   53     | Expr . p88 Expr
   54     | Expr . p89 Expr
   55     | Expr . p90 Expr
   56     | Expr . p133 Expr
   57     | Expr . p103 Expr
   58     | Expr . p102 Expr
   59     | Expr . p117 Expr
   60     | Expr . p116 Expr
   61     | Expr . p118 Expr
   62     | Expr . p119 Expr
   63     | Expr . p109 Expr
   64     | Expr . p108 Expr
   65     | p98 Expr .

    $default  reduce using rule 65 (Expr)


State 70

   52 Expr: Expr . p87 Expr
   53     | Expr . p88 Expr
   54     | Expr . p89 Expr
   55     | Expr . p90 Expr
   56     | Expr . p133 Expr
   57     | Expr . p103 Expr
   58     | Expr . p102 Expr
   59     | Expr . p117 Expr
   60     | Expr . p116 Expr
   61     | Expr . p118 Expr
   62     | Expr . p119 Expr
   63     | Expr . p109 Expr
   64     | Expr . p108 Expr
   70     | p91 Expr . p92

    p102  shift, and go to state 73
    p103  shift, and go to state 74
    p87   shift, and go to state 75
    p88   shift, and go to state 76
    p89   shift, and go to state 77
    p90   shift, and go to state 78
    p92   shift, and go to state 94
    p108  shift, and go to state 79
    p109  shift, and go to state 80
    p116  shift, and go to state 81
    p117  shift, and go to state 82
    p118  shift, and go to state 83
    p119  shift, and go to state 84
    p133  shift, and go to state 85


State 71

   71 ReadInt: p132 p91 . p77 p92

    p77  shift, and go to state 95


State 72

   35 ReturnStmt: p44 Expr p101 .

    $default  reduce using rule 35 (ReturnStmt)


State 73

   58 Expr: Expr p102 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 96
    ReadInt   go to state 58


State 74

   57 Expr: Expr p103 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 97
    ReadInt   go to state 58


State 75

   52 Expr: Expr p87 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 98
    ReadInt   go to state 58


State 76

   53 Expr: Expr p88 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 99
    ReadInt   go to state 58


State 77

   54 Expr: Expr p89 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 100
    ReadInt   go to state 58


State 78

   55 Expr: Expr p90 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 101
    ReadInt   go to state 58


State 79

   64 Expr: Expr p108 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 102
    ReadInt   go to state 58


State 80

   63 Expr: Expr p109 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 103
    ReadInt   go to state 58


State 81

   60 Expr: Expr p116 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 104
    ReadInt   go to state 58


State 82

   59 Expr: Expr p117 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 105
    ReadInt   go to state 58


State 83

   61 Expr: Expr p118 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 106
    ReadInt   go to state 58


State 84

   62 Expr: Expr p119 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 107
    ReadInt   go to state 58


State 85

   56 Expr: Expr p133 . Expr

    p74   shift, and go to state 50
    p98   shift, and go to state 51
    p91   shift, and go to state 53
    p200  shift, and go to state 54
    p132  shift, and go to state 55

    CallExpr  go to state 56
    Expr      go to state 108
    ReadInt   go to state 58


State 86

   27 AssignStmt: p200 p121 Expr . p101
   52 Expr: Expr . p87 Expr
   53     | Expr . p88 Expr
   54     | Expr . p89 Expr
   55     | Expr . p90 Expr
   56     | Expr . p133 Expr
   57     | Expr . p103 Expr
   58     | Expr . p102 Expr
   59     | Expr . p117 Expr
   60     | Expr . p116 Expr
   61     | Expr . p118 Expr
   62     | Expr . p119 Expr
   63     | Expr . p109 Expr
   64     | Expr . p108 Expr

    p101  shift, and go to state 109
    p102  shift, and go to state 73
    p103  shift, and go to state 74
    p87   shift, and go to state 75
    p88   shift, and go to state 76
    p89   shift, and go to state 77
    p90   shift, and go to state 78
    p108  shift, and go to state 79
    p109  shift, and go to state 80
    p116  shift, and go to state 81
    p117  shift, and go to state 82
    p118  shift, and go to state 83
    p119  shift, and go to state 84
    p133  shift, and go to state 85


State 87

   32 CallExpr: p200 p91 Actuals . p92

    p92  shift, and go to state 110


State 88

   34 Actuals: Expr . PActuals
   52 Expr: Expr . p87 Expr
   53     | Expr . p88 Expr
   54     | Expr . p89 Expr
   55     | Expr . p90 Expr
   56     | Expr . p133 Expr
   57     | Expr . p103 Expr
   58     | Expr . p102 Expr
   59     | Expr . p117 Expr
   60     | Expr . p116 Expr
   61     | Expr . p118 Expr
   62     | Expr . p119 Expr
   63     | Expr . p109 Expr
   64     | Expr . p108 Expr

    p102  shift, and go to state 73
    p103  shift, and go to state 74
    p87   shift, and go to state 75
    p88   shift, and go to state 76
    p89   shift, and go to state 77
    p90   shift, and go to state 78
    p108  shift, and go to state 79
    p109  shift, and go to state 80
    p116  shift, and go to state 81
    p117  shift, and go to state 82
    p118  shift, and go to state 83
    p119  shift, and go to state 84
    p133  shift, and go to state 85

    $default  reduce using rule 29 (PActuals)

    PActuals  go to state 111


State 89

   28 PrintStmt: p131 p91 p77 . PActuals p92 p101

    $default  reduce using rule 29 (PActuals)

    PActuals  go to state 112


State 90

   39 TestExpr: p91 Expr . p92
   52 Expr: Expr . p87 Expr
   53     | Expr . p88 Expr
   54     | Expr . p89 Expr
   55     | Expr . p90 Expr
   56     | Expr . p133 Expr
   57     | Expr . p103 Expr
   58     | Expr . p102 Expr
   59     | Expr . p117 Expr
   60     | Expr . p116 Expr
   61     | Expr . p118 Expr
   62     | Expr . p119 Expr
   63     | Expr . p109 Expr
   64     | Expr . p108 Expr
